--- a/WaterIntakeCalcWeb/app/index.html
+++ b/WaterIntakeCalcWeb/app/index.html
@@ -64,6 +64,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/waterinake.js"></script>
+        <script src="scripts/services/authservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
